- Updates to Transactions and Transaction Definitions including Linked Transactions, filters, and user management integration - Updates to Entities and Schemas to support Document types - Support for Camunda service task delegates - Support for Firebase Authorization and Spring Security - Support for the User Management API - Other minor functional improvements
