# service/src/main/java/io/nuvalence/workmanager/service/domain/transaction/TransactionLinkType.java
@@ -1,0 +1,68 @@
+package io.nuvalence.workmanager.service.domain.transaction;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import org.hibernate.annotations.GenericGenerator;
+import org.hibernate.annotations.Type;
+
+import java.util.Objects;
+import java.util.UUID;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.persistence.Table;
+
+/**
+ * A type of link between two transaction definitions.
+ */
+@Getter
+@Setter
+@Builder(toBuilder = true)
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+@Table(name = "transaction_link_type")
+public class TransactionLinkType {
+    @Id
+    @GeneratedValue(generator = "uuid2")
+    @GenericGenerator(name = "uuid2", strategy = "org.hibernate.id.UUIDGenerator")
+    @Type(type = "uuid-char")
+    @Column(name = "id", length = 36, insertable = false, updatable = false, nullable = false)
+    private UUID id;
+
+    @Column(name = "name")
+    private String name;
+
+    @Column(name = "from_description")
+    private String fromDescription;
+
+    @Column(name = "to_description")
+    private String toDescription;
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+
+        TransactionLinkType that = (TransactionLinkType) o;
+        return Objects.equals(id, that.id)
+                && Objects.equals(name, that.name)
+                && Objects.equals(fromDescription, that.fromDescription)
+                && Objects.equals(toDescription, that.toDescription);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(id, name, fromDescription, toDescription);
+    }
+}
